--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,6 +26,7 @@
             android:layout_width="200dp"
             android:layout_height="50dp"/>
     </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/btnlogin"
         android:layout_width="wrap_content"
@@ -33,6 +34,5 @@
         android:layout_marginLeft="150dp"
         android:layout_marginTop="450dp"
         android:text="登录"
-        android:textSize="15dp"
-        />
+        android:textSize="15dp" />
 </RelativeLayout>
